<resources>
    <string name="app_name">Android Chat</string>
    <string name="user_name">User Name</string>
    <string name="Admob_appID">ca-app-pub-2567202150499835~3460887884</string>
    <string name="native_ad">ca-app-pub-2567202150499835/4786767210</string>
    <string name="Admob_bannerAd">ca-app-pub-2567202150499835/5330171629</string>
    <string name="ad2">ca-app-pub-2567202150499835/5434769946</string>
    <string name="ad3">ca-app-pub-2567202150499835/9400089205</string>

    <string name="title_activity_set_password">Sign in</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email completions."</string>
    <string name="developer_mail">dutta15developer@gmail.com</string>
    <string name="subject">Anonymous AndroidChat Feedback</string>
    <string name="chooser_title">Send Feedback</string>
    <string name="nav_open">navigation open</string>
    <string name="nav_close">navigation close</string>
    <string name="username">Welcome %1$s</string>
    <string name="profile">Profile</string>
    <string name="device">Device: %1$s</string>
    <string name="app_version">App Version: %1$s</string>
    <string name="os">OS: Android %1$s</string>
    <string name="reset_email_hint">Enter email to reset your password</string>
    <string name="password_hint">Password</string>
    <string name="username_hint">Username</string>
    <string name="image_test">Image</string>
    <string name="already_have_an_account">Already Have an Account ?</string>
    <string name="register">Register</string>
    <string name="e_mail_hinst">E-mail</string>
    <string name="email_hint_login">Email</string>
    <string name="hint_pasword">pasword</string>
    <string name="register_msg">Register New User</string>
    <string name="image_view">Image View</string>
    <string name="reset_password">Reset Password</string>
    <string name="reset_email_password">Reset Email Password</string>

</resources>
