<?xml version="1.0" encoding="utf-8"?>
<androidx.drawerlayout.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        xmlns:tools="http://schemas.android.com/tools"
        android:fitsSystemWindows="true"
        tools:openDrawer="start"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:id="@+id/navigation_drawer_layout"
        android:layout_height="match_parent">

    <include layout="@layout/activity_message"/>

    <com.google.android.material.navigation.NavigationView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:id="@+id/nav_view"
            android:fitsSystemWindows="true"
            android:layout_gravity="start"
            app:headerLayout="@layout/nav_header"
            app:menu="@menu/drawer_menu"
            >
        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:orientation="vertical">
            <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/device"
                    android:textColor="@color/black"
                    android:id="@+id/nav_device_name"
                    android:textAlignment="gravity"
                    android:gravity="start"
                    android:layout_marginStart="20dp"
                    />
            <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/app_version"
                    android:textColor="@color/black"
                    android:id="@+id/nav_build_ver"
                    android:layout_marginStart="20dp"
                    android:gravity="start"
                    />
            <TextView
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:text="@string/os"
                    android:textColor="@color/black"
                    android:id="@+id/nav_os_name"
                    android:gravity="start"
                    android:layout_marginStart="20dp"
                    />
        </LinearLayout>
    </com.google.android.material.navigation.NavigationView>

</androidx.drawerlayout.widget.DrawerLayout>