<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:ads="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        >
    <androidx.appcompat.widget.Toolbar
            android:id="@+id/activity_main_toolbar"
            android:background="@color/colorPrimary"
            android:layout_width="match_parent"
            app:titleTextColor="@color/white"
            android:layout_height="?attr/actionBarSize"/>


<RelativeLayout

        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:context=".chat_Message.MessageActivity">



    <androidx.coordinatorlayout.widget.CoordinatorLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

        <androidx.recyclerview.widget.RecyclerView

                android:id="@+id/recylerView_latestMessage"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.0" />


    </androidx.coordinatorlayout.widget.CoordinatorLayout>

    <com.google.android.gms.ads.AdView
            android:layout_width="45dp"
            android:layout_height="88dp"
            android:foregroundGravity="right"
            android:id="@+id/adView2"
            android:layout_marginTop="16dp"
            ads:adUnitId="@string/ad3"
            ads:adSize="SMART_BANNER"
            app:layout_constraintBottom_toBottomOf="parent"/>
    <com.google.android.gms.ads.AdView
            android:id="@+id/adView"
            android:layout_width="327dp"
            android:layout_height="25dp"
            android:layout_centerHorizontal="true"
            android:layout_alignParentBottom="true"
            ads:adSize="SMART_BANNER"
            ads:adUnitId="@string/native_ad"
            tools:ignore="MissingConstraints"
            tools:layout_editor_absoluteX="129dp" android:layout_marginTop="4dp"
            ads:layout_constraintTop_toTopOf="parent" android:visibility="visible">
    </com.google.android.gms.ads.AdView>
    <com.google.android.gms.ads.AdView
            android:layout_width="323dp"
            android:layout_height="21dp" android:id="@+id/adView3"
            ads:adSize="SMART_BANNER"
            ads:adUnitId="@string/Admob_bannerAd"
            app:layout_constraintBottom_toBottomOf="parent" android:layout_marginStart="8dp"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginEnd="8dp"
            app:layout_constraintEnd_toEndOf="parent"/>

    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

        android:gravity="bottom">
        <com.google.android.gms.ads.AdView
                ads:adSize="SMART_BANNER"
                android:layout_width="match_parent"
                ads:adUnitId="@string/ad2"
                android:layout_height="20dp" />
    </LinearLayout>


</RelativeLayout>

</LinearLayout>