<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center_horizontal"
        android:background="@color/colorAccent"
        tools:context=".sign_In_Activity.RegisterActivity">

    <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center_horizontal">

        <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

            <EditText
                    android:id="@+id/emailID"
                    android:layout_width="300dp"
                    android:layout_height="50dp"
                    android:layout_marginTop="8dp"
                    android:background="@drawable/rounded_edges_register_login"
                    android:ems="10"
                    android:foregroundGravity="center"
                    android:gravity="center"
                    android:hint="@string/e_mail_hinst"
                    android:inputType="textEmailAddress"
                    android:paddingStart="20dp"
                    app:layout_constraintEnd_toEndOf="@+id/usernameID"
                    app:layout_constraintHorizontal_bias="0.0"
                    app:layout_constraintStart_toStartOf="@+id/usernameID"
                    app:layout_constraintTop_toBottomOf="@+id/usernameID"
                    tools:ignore="MissingConstraints" />

            <Button

                    android:id="@+id/register_button"
                    android:layout_width="310dp"
                    android:layout_height="57dp"
                    android:layout_marginTop="12dp"
                    android:background="@drawable/rounded_button"
                    android:text="@string/register"
                    android:textColor="@color/white"
                    app:layout_constraintEnd_toEndOf="@+id/passwordID"
                    app:layout_constraintHorizontal_bias="0.8"
                    app:layout_constraintStart_toStartOf="@+id/passwordID"
                    app:layout_constraintTop_toBottomOf="@+id/passwordID"
                    tools:ignore="MissingConstraints" />

            <TextView
                    android:id="@+id/already_have_Account"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="12dp"
                    android:text="@string/already_have_an_account"
                    android:textColor="@android:color/white"
                    android:textSize="16sp"
                    android:textStyle="bold"
                    app:layout_constraintEnd_toEndOf="@+id/register_button"
                    app:layout_constraintStart_toStartOf="@+id/register_button"
                    app:layout_constraintTop_toBottomOf="@+id/register_button"
                    tools:ignore="MissingConstraints" />

            <EditText
                    android:id="@+id/passwordID"
                    android:layout_width="300dp"
                    android:layout_height="50dp"
                    android:layout_marginTop="8dp"
                    android:background="@drawable/rounded_edges_register_login"
                    android:ems="10"
                    android:gravity="center"
                    android:hint="@string/password_hint"
                    android:inputType="textPassword"
                    android:paddingStart="20dp"
                    app:layout_constraintEnd_toEndOf="@+id/emailID"
                    app:layout_constraintHorizontal_bias="0.0"
                    app:layout_constraintStart_toStartOf="@+id/emailID"
                    app:layout_constraintTop_toBottomOf="@+id/emailID"
                    tools:ignore="MissingConstraints" />

            <EditText
                    android:id="@+id/usernameID"
                    android:layout_width="300dp"
                    android:layout_height="50dp"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="250dp"
                    android:layout_marginEnd="16dp"
                    android:autofillHints=""
                    android:background="@drawable/rounded_edges_register_login"
                    android:ems="10"
                    android:gravity="center"
                    android:hint="@string/username_hint"
                    android:inputType="text"
                    android:paddingStart="20dp"
                    app:layout_constraintBottom_toTopOf="@+id/emailID"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintVertical_chainStyle="spread_inside"
                    tools:ignore="MissingConstraints" />

            <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.0"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintVertical_bias="0.0">

            </androidx.constraintlayout.widget.ConstraintLayout>
        </androidx.constraintlayout.widget.ConstraintLayout>
    </LinearLayout>

    <de.hdodenhof.circleimageview.CircleImageView android:layout_width="150dp"
                                                  android:layout_height="150dp" tools:ignore="MissingConstraints"
                                                  android:id="@+id/selectPhotoImageView"
                                                  app:civ_border_width="4dp"
                                                  app:civ_border_color="@color/border_color"
                                                  app:layout_constraintTop_toTopOf="@+id/selectPhoto_Register"
                                                  app:layout_constraintEnd_toEndOf="@+id/selectPhoto_Register"
                                                  app:layout_constraintBottom_toBottomOf="@+id/selectPhoto_Register"
                                                  app:layout_constraintVertical_bias="0.36"
                                                  app:layout_constraintStart_toStartOf="@+id/selectPhoto_Register"
                                                  app:layout_constraintHorizontal_bias="0.0"/>

    <Button
            android:id="@+id/selectPhoto_Register"
            android:layout_width="145dp"
            android:layout_height="145dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="64dp"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="48dp"
            android:background="@drawable/button_circle"
            android:text="@string/image_test"
            app:layout_constraintBottom_toTopOf="@+id/usernameID"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.497"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.0"
            tools:ignore="MissingConstraints,NotSibling" />

</androidx.constraintlayout.widget.ConstraintLayout>